--- a/bank-backend/src/main/resources/application.yml
+++ b/bank-backend/src/main/resources/application.yml
@@ -15,3 +15,12 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+server:
+  ssl:
+    enabled: true
+    key-store: classpath:keystore.p12
+    key-store-password: ${KEYSTORE_PASSWORD}
+    key-store-type: PKCS12
+    key-alias: selfsigned_localhost_sslserver
+  port: 8443
