--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -1,6 +1,9 @@
 events {}
 
 http {
+
+    server_tokens off;
+
     server {
         listen 443 ssl;
         
@@ -9,6 +12,12 @@ http {
 
         location /api/ {
             proxy_pass https://bank-backend:8443/api/;
+            proxy_hide_header Server;
+        }
+
+        location / {
+            proxy_pass https://bank-frontend:443;
+            proxy_hide_header Server;
         }
     }
 }
