--- a/bank-backend/src/main/resources/application.yml
+++ b/bank-backend/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 server:
   ssl:
     enabled: true
-    key-store: classpath:keystore.p12
+    key-store: ./keystore.p12
     key-store-password: ${KEYSTORE_PASSWORD}
     key-store-type: PKCS12
     key-alias: selfsigned_localhost_sslserver
